<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="20dp"
    android:orientation="vertical"
    android:background="#FFE4C9"
    android:theme="@style/Backround.color1">
    <TextView
        android:id="@+id/t"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/scroller"
        android:text="Add Item Requirement"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />
    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@+id/t"
        app:layout_constraintBottom_toTopOf="@id/save"
        app:layout_constraintVertical_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="69dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:text="@string/ro"
                android:textSize="15sp" />

            <AutoCompleteTextView
                android:id="@+id/ro"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginVertical="8dp"
                android:background="@drawable/border"
                android:focusableInTouchMode="true"
                android:textColor="@color/black"
                android:paddingHorizontal="10dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:text="@string/pmu"
                android:textSize="15sp" />

            <AutoCompleteTextView
                android:id="@+id/pmu"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginVertical="8dp"
                android:background="@drawable/border"
                android:focusableInTouchMode="true"
                android:textColor="@color/black"
                android:paddingHorizontal="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:text="@string/location"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/loc"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginVertical="8dp"
                android:paddingHorizontal="10dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:background="@drawable/border"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:text="@string/equipment"
                android:textSize="15sp" />

            <AutoCompleteTextView
                android:id="@+id/Type"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginVertical="8dp"
                android:background="@drawable/border"
                android:focusableInTouchMode="true"
                android:textColor="@color/black"
                android:paddingHorizontal="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:text="@string/quantity"
                android:textSize="15sp" />
            <EditText
                android:id="@+id/contractorName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingHorizontal="10dp"
                android:layout_marginVertical="8dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:background="@drawable/border" />
        </LinearLayout>

    </ScrollView>
    <Button
        android:id="@+id/save"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_box"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroller"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginVertical="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/save"
        android:textColor="@color/black"
        android:textStyle="bold" />
</androidx.constraintlayout.widget.ConstraintLayout>